fix: Neutral default colors. Ready for dark mode

--- a/src/styles/_input.scss
+++ b/src/styles/_input.scss
@@ -3,8 +3,8 @@
   --padding: var(--input-padding, 0.5rem);
   --margin: var(--input-margin, 1px);
   --border-radius: var(--input-border-radius, 4px);
-  --background: var(--input-background, #fff);
-  --border: var(--input-border, 1px solid #c8c8cf);
+  --background: var(--input-background, var(--color-bg, inherit));
+  --border: var(--input-border, 1px solid #8886);
 
   display: inline-flex;
   gap: var(--padding);
